--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -120,8 +120,8 @@
 
                 <TextView
                     android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="16dp"
+                    android:layout_height="19dp"
                     android:text="ou"
                     android:textColor="#2C2C2C"
                     android:textColorHint="#2C2C2C"
@@ -130,41 +130,51 @@
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
-                    app:layout_constraintVertical_bias="0.13" />
+                    app:layout_constraintVertical_bias="0.19" />
 
                 <TextView
                     android:id="@+id/tv_dont_have_an_account"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="19dp"
                     android:text="Não tem uma conta? Crie agora mesmo!"
                     android:textColor="#2C2C2C"
                     android:textColorHint="#2C2C2C"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.503"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    app:layout_constraintVertical_bias="0.19" />
+                    app:layout_constraintVertical_bias="0.26999998" />
 
                 <View
                     android:id="@+id/divider2"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:background="#2C2C2C"
                     app:layout_constraintBottom_toTopOf="@+id/tv_dont_have_an_account"
                     app:layout_constraintEnd_toStartOf="@+id/textView3"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
-                    app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />
+                    app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
+                    app:layout_constraintVertical_bias="0.526" />
 
                 <View
                     android:id="@+id/divider3"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="33dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="31dp"
                     android:background="#2C2C2C"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_dont_have_an_account"
                     app:layout_constraintEnd_toEndOf="@+id/sign_in_btn"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
-                    tools:layout_editor_absoluteY="571dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
+                    app:layout_constraintVertical_bias="0.526" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
