--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -46,6 +46,7 @@
                     android:ems="10"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
+                    android:textColor="@color/black"
                     android:textColorHint="#626262"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +83,7 @@
                     android:backgroundTint="#626262"
                     android:ems="10"
                     android:hint="Senha"
+                    android:textColor="@color/black"
                     android:inputType="textPassword"
                     android:textColorHint="#626262"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -106,17 +108,14 @@
                     android:id="@+id/sign_in_btn"
                     android:layout_width="344dp"
                     android:layout_height="46dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginBottom="193dp"
+                    android:layout_marginBottom="164dp"
                     android:background="#00CC66"
                     android:text="Entrar"
                     android:textAllCaps="false"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.492"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/sign_in_forgot_password"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/textView3"
@@ -175,6 +174,18 @@
                     app:layout_constraintStart_toEndOf="@+id/textView3"
                     app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
                     app:layout_constraintVertical_bias="0.526" />
+
+                <ProgressBar
+                    android:id="@+id/sign_in_progressbar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="30dp"
+                    android:layout_height="33dp"
+                    android:layout_marginTop="24dp"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
