--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -49,6 +49,7 @@
             android:backgroundTint="#626262"
             android:ems="10"
             android:hint="Email"
+            android:textColor="@color/black"
             android:inputType="textEmailAddress"
             android:textColorHint="#626262"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -66,6 +67,7 @@
             android:backgroundTint="#626262"
             android:ems="10"
             android:hint="Nome Completo"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:textColorHint="#626262"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -85,6 +87,7 @@
             android:backgroundTint="#626262"
             android:ems="10"
             android:hint="Confirmar Senha"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:textColorHint="#626262"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -104,6 +107,7 @@
             android:backgroundTint="#626262"
             android:ems="10"
             android:hint="Senha"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:textColorHint="#626262"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -123,10 +127,10 @@
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintHorizontal_bias="0.477"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password"
-            app:layout_constraintVertical_bias="0.333" />
+            app:layout_constraintVertical_bias="0.591" />
 
         <TextView
             android:id="@+id/tv_already_have_an_account"
@@ -143,17 +147,17 @@
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintVertical_bias="0.19" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ou"
-            android:textColor="#2C2C2C"
-            android:textColorHint="#2C2C2C"
+        <ProgressBar
+            android:id="@+id/sign_up_progressbar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="30dp"
+            android:layout_height="33dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
