--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,4 +31,9 @@
             <!-- Customize your theme here. -->
         </style>
 
+        <style name="GreenProgressBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+            <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+            <!-- Customize your theme here. -->
+        </style>
+
 </resources>
