mudança icone aplicativo

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -111,8 +111,7 @@
                 android:layout_height="wrap_content"
                 android:text="Recuperação de senha enviada com sucesso. Verifique o seu email."
                 android:textAlignment="center"
-                android:textColor="#2C2C2C"
-                android:textColorHint="#2C2C2C"
+                android:textColor="#00CC66"
                 android:visibility="gone">
 
             </TextView>
