--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_ads_all">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_ads_all"
         android:name="com.example.trabalho_mobile.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/menu_ads_all"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_ads"
         android:name="com.example.trabalho_mobile.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_ads"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_favorites"
         android:name="com.example.trabalho_mobile.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_favorites"
+        tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_properties"
+        android:name="com.example.trabalho_mobile.ui.slideshow.SlideshowFragment"
+        android:label="@string/menu_properties"
+        tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_categories"
+        android:name="com.example.trabalho_mobile.ui.category.CategoryFragment"
+        android:label="@string/menu_categories"
+        tools:layout="@layout/fragment_category" />
+
+    <fragment
+        android:id="@+id/nav_login"
+        android:name="com.example.trabalho_mobile.ui.slideshow.SlideshowFragment"
+        android:label="@string/menu_login"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
