--- a/app/src/main/res/menu/adicionar_registro.xml
+++ b/app/src/main/res/menu/adicionar_registro.xml
@@ -2,10 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_adicionar"
         android:orderInCategory="100"
-        android:icon="@mipmap/search"
-        app:showAsAction="always"
-        android:title="search"
-        />
+        android:title="Adicionar Registro"
+        android:icon="@mipmap/ic_menu_salvar"
+        app:showAsAction="always" />
 </menu>
