--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_ads_all"
-        android:name="com.example.trabalho_mobile.ui.home.HomeFragment"
+        android:name="com.example.trabalho_mobile.ui.anuncios.AnuncioFragment"
         android:label="@string/menu_ads_all"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_anuncio" />
 
     <fragment
         android:id="@+id/nav_ads"
@@ -19,15 +19,15 @@
 
     <fragment
         android:id="@+id/nav_favorites"
-        android:name="com.example.trabalho_mobile.ui.slideshow.SlideshowFragment"
+        android:name="com.example.trabalho_mobile.ui.slideshow.LoginFragment"
         android:label="@string/menu_favorites"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_login" />
 
     <fragment
         android:id="@+id/nav_properties"
-        android:name="com.example.trabalho_mobile.ui.slideshow.SlideshowFragment"
+        android:name="com.example.trabalho_mobile.ui.imoveis.ImoveisFragment"
         android:label="@string/menu_properties"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_imoveis" />
 
     <fragment
         android:id="@+id/nav_categories"
@@ -37,7 +37,7 @@
 
     <fragment
         android:id="@+id/nav_login"
-        android:name="com.example.trabalho_mobile.ui.slideshow.SlideshowFragment"
+        android:name="com.example.trabalho_mobile.ui.slideshow.LoginFragment"
         android:label="@string/menu_login"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_login" />
 </navigation>
